Java8 compilation fix